k8s/security/wazuh-agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: wazuh-agent
  namespace: security
spec:
  selector:
    matchLabels:
      app: wazuh-agent
  template:
    metadata:
      labels:
        app: wazuh-agent
    spec:
      containers:
        - name: wazuh-agent
          image: wazuh/wazuh-agent:4.14.4
          volumeMounts:
            - name: wazuh-config
              mountPath: /wazuh-config-mount/etc/ossec.conf
              subPath: ossec.conf
            - name: varlog
              mountPath: /var/log
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: wazuh-config
          configMap:
            name: wazuh-agent-config
        - name: varlog
          hostPath:
            path: /var/log
      tolerations:
        - operator: Exists
